--- a/app/src/main/res/layout/sample_quote_image.xml
+++ b/app/src/main/res/layout/sample_quote_image.xml
@@ -13,6 +13,7 @@
         app:layout_constraintDimensionRatio="1:1">
         <ImageView
             android:id="@+id/QuoteViewImage"
+            android:src="@drawable/"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
