--- a/app/src/main/res/layout/sample_quote_image.xml
+++ b/app/src/main/res/layout/sample_quote_image.xml
@@ -13,7 +13,7 @@
         app:layout_constraintDimensionRatio="1:1">
         <ImageView
             android:id="@+id/QuoteViewImage"
-            android:src="@drawable/"
+            android:src="@drawable/adrien_olichon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
@@ -49,6 +49,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
-        </>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
