--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,96 +24,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-            <HorizontalScrollView
-                android:visibility="gone"
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sample_image_quote">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/change_quote_card"
-                        android:onClick="ChangeQuote"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="16dp">
-
-                        <ImageView
-                            android:tint="@android:color/black"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_feather"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:layout_marginTop="16pt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="@string/change_quote" />
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/change_fontstyle_card"
-                        android:onClick="ChangeFontStyle"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="16dp">
-
-                        <ImageView
-                            android:tint="@android:color/black"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_font"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:layout_marginTop="16pt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="@string/change_fontstyle" />
-
-                    </androidx.cardview.widget.CardView>
-
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/change_image_card"
-                        android:onClick="ChangeImage"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="16dp">
-
-                        <ImageView
-                            android:tint="@android:color/black"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_image"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:layout_marginTop="16pt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="@string/change_image" />
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-            </HorizontalScrollView>
+            <RelativeLayout
+                app:layout_constraintTop_toBottomOf="@id/sample_image_quote"
+                android:id="@+id/root_fragment_holder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <RelativeLayout
                 android:visibility="gone"
@@ -123,27 +38,40 @@
                 android:layout_height="wrap_content">
                 <fragment
                     android:id="@+id/GetQuoteDetailsFrag"
-                    android:name="in.webxstudio.android.quoteiko.GetQuoteDetailsFragment"
+                    android:name="in.webxstudio.android.quoteiko.ChangeQuoteFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
             </RelativeLayout>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:id="@+id/change_fontstyle_layout"
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/change_font_layout"
                 app:layout_constraintTop_toBottomOf="@id/sample_image_quote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <fragment
+                    android:id="@+id/ChangeFontStyleFragment"
+                    android:name="in.webxstudio.android.quoteiko.ChangeFontStyleFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </RelativeLayout>
 
-            </LinearLayout>
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/change_image_layout"
+                app:layout_constraintTop_toBottomOf="@id/sample_image_quote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <fragment
+                    android:id="@+id/change_image_fragment"
+                    android:name="in.webxstudio.android.quoteiko.ChangeImageFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </RelativeLayout>
 
-            <!--            <fragment-->
-<!--                android:id="@+id/GetQuoteDetailsFrag"-->
-<!--                android:name="in.webxstudio.android.quoteiko.GetQuoteDetailsFragment"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/fragment" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
