--- a/app/src/main/res/layout/fragment_change_image.xml
+++ b/app/src/main/res/layout/fragment_change_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ChangeImageFragment">
+    tools:context=".ChangeStyleFragments.ChangeImageFragment">
 
     <HorizontalScrollView
         android:id="@+id/horizontal_image_slider"
