--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/quote_field"
                             android:layout_margin="16dp"
                             android:textSize="48sp"
                             android:text="@string/quotes_string"
@@ -48,6 +49,7 @@
                             android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:id="@+id/quote_author_field"
                             android:layout_marginTop="16dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginBottom="8dp"
@@ -56,6 +58,8 @@
                             android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:visibility="gone"
+                            android:id="@+id/extras_context_field"
                             android:layout_marginTop="16dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginBottom="8dp"
