--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,14 @@
                         android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <TextView
                             android:id="@+id/quote_field"
-                            android:layout_margin="16dp"
-                            android:textSize="48sp"
-                            android:text="@string/quotes_string"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_margin="16dp"
+                            android:text="@string/quotes_string"
+                            android:textSize="48sp" />
 
                         <TextView
                             android:id="@+id/quote_author_field"
