--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
 
             <RelativeLayout
                 app:layout_constraintTop_toBottomOf="@id/quote_image_holder"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/root_fragment_holder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
