--- a/app/src/main/res/layout/fragment_change_image.xml
+++ b/app/src/main/res/layout/fragment_change_image.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/parent_constraint_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/list_of_cards"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
@@ -22,6 +25,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_margin="16dp"
+                android:foregroundTint="#FFFFFF"
                 app:cardCornerRadius="16dp">
 
                 <ImageView
