--- a/app/src/main/res/layout/fragment_change_image.xml
+++ b/app/src/main/res/layout/fragment_change_image.xml
@@ -184,10 +184,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/submit_image_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="8dp"
-            android:text="Done"
+            android:text="@string/done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
