--- a/app/src/main/res/layout/currently_selected_image.xml
+++ b/app/src/main/res/layout/currently_selected_image.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:textSize="24sp"
         android:text="@string/selected"
+        android:textColor="#FFF"
         android:padding="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
