--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,45 +28,48 @@
                 android:layout_height="match_parent"
                 android:src="@drawable/adrien_olichon" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/quote_text_and_context"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_weight="16"
+                        android:padding="16dp"
+                        android:layout_height="0dp">
+                        <TextView
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:id="@+id/quote_field"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/quotes_string"
+                            android:textSize="12sp" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="@id/quote_text_and_context">
-
-                    <TextView
-                        android:id="@+id/quote_field"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-                        android:text="@string/quotes_string"
-                        android:textSize="48sp" />
-
+                    android:padding="16sp"
+                    android:orientation="vertical">
                     <TextView
                         android:id="@+id/quote_author_field"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:textSize="24sp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginBottom="8dp"
                         android:text="Author name" />
 
                     <TextView
                         android:id="@+id/extras_context_field"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="8dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         android:text="Quote Context"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
                 </LinearLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
